EVALSYS-1472 Support for roster/section based delivery (#38)